# tonys-puzzles

./: README.md
cube-sums/: Cargo.toml  cube-sums.sln
cube-sums/ConsoleApp/: Program.cs
cube-sums/benches/: cube_sum_finder_benchmarks.rs
cube-sums/src/: awful_cube_sum_finder.rs  cube_sum_finder.rs  less_awful_cube_sum_finder.rs  main.rs  reasonable_cube_sum_finder.rs  slightly_less_awful_cube_sum_finder.rs
find-string-permutations/: find-string-permutations.sln
find-string-permutations/ConsoleApp/: Finder.cs  IFinder.cs  Location.cs  Program.cs
find-string-permutations/ConsoleApp.Tests/: ConsoleApp.Tests.csproj  FinderTests.cs
implement-string-builder/: Cargo.toml
implement-string-builder/src/: main.rs  string_builder.rs
palindrome-possibility-detector/: Cargo.toml
palindrome-possibility-detector/src/: main.rs  palindrome_detector.rs
